# HikBoxPictures

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: codex_shit_retro.md  db_schema.md  group_pics_algo.md  runtime_semantics.md
hikbox/: __init__.py  __main__.py  cli.py
hikbox_pictures/: __init__.py  __main__.py  _magface_iresnet.py  cli.py  face_review_diff.py  face_review_person_diff.py  face_review_pipeline.py  immich_face_single_file.py  immich_people_review.py  immich_people_sqlite.py
scripts/: activate_identity_cluster_run.py  build_identity_observation_snapshot.py  calibrate_thresholds.py  evaluate_identity_thresholds.py  export_identity_v3_1_report.py  export_observation_neighbors.py  extract_faces.py  generate_immich_people_review.py  generate_immich_people_review_html.py  generate_immich_people_summary.py  generate_workspace_review.py  inspect_distances.py  install.sh  rebuild_identities_v3.py  rerun_identity_cluster_run.py  run_tests.sh  select_identity_cluster_run.py  setup_playwright_zh_fonts.sh
tests/: conftest.py  test_cli.py  test_db_migration.py  test_deepface_engine.py  test_export_plan.py  test_export_templates_api.py  test_export_templates_execution.py  test_export_templates_locking.py  test_exporter.py  test_extract_faces.py  test_face_review_diff.py  test_face_review_person_diff.py  test_face_review_pipeline.py  test_hikbox_init_cli.py  test_hikbox_scan_cli.py  test_hikbox_serve_cli.py  test_hikbox_source_cli.py  test_image_io.py  test_immich_face_single_file.py  test_immich_people_review.py  test_insightface_engine.py  test_inspect_distances.py  test_matcher.py  test_metadata.py  test_online_assignment.py  test_reference_loader.py  test_reference_template.py  test_repo_samples.py  test_scan_redetection_runtime.py  test_smoke.py  (+1 more)
(+370 files in other folders)
