[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hikbox-pictures"
version = "0.1.0"
description = "Find photos that contain two specific people and export them by month."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "face_recognition>=1.3.0",
  "Pillow>=10.0.0",
  "pillow-heif>=0.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
hikbox-pictures = "hikbox_pictures.cli:cli_entry"

[tool.pytest.ini_options]
testpaths = ["tests"]
